lab1/Test/L1-A-10-84.output
Error Type A at Line 8
Error Type A at Line 32
Error Type B at Line 41
